# vircon-project

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: CreateNotcursesCoreTarget.cmake
flutter-client/: CMakeLists.txt  pubspec.yaml
flutter-client/android/app/: build.gradle
flutter-client/android/app/src/main/: AndroidManifest.xml
flutter-client/android/app/src/main/kotlin/com/rmzerofour/vircon/: MainActivity.kt
flutter-client/cmake/: FindFlutter.cmake
flutter-client/lib/: main.dart
flutter-client/lib/common/: routes.dart
flutter-client/lib/features/connect/: connect_page.dart  connection_details_form.dart  could_not_connect_page.dart  home_page.dart
flutter-client/lib/features/controller/: controller_page.dart
server/: CMakeLists.txt  connection.cpp  connection.h  gamepad.cpp  gamepad.h  guistate.cpp  guistate.h  main.cpp  serverstate.cpp  serverstate.h  snapshot.h  version.h.in
server/cmake/: Findlibevdev.cmake
terminal-client/: CMakeLists.txt  guistate.cpp  guistate.h  main.cpp  textinput.cpp  textinput.h  version.h.in
